<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.jailedbird.feature.settings.SettingFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        style="@style/Widget.IOSched.AppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.IOSched.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:title="@string/settings_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_normal"
            android:paddingBottom="@dimen/margin_normal">

            <TextView
                android:id="@+id/tvChooseTheme"
                style="@style/Widget.IOSched.Settings.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:text="@string/settings_theme_title" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/swCenterMatch"
                style="@style/Widget.IOSched.Settings.Switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enable_infix_match" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/swInIng"
                style="@style/Widget.IOSched.Settings.Switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enable_confuse_ing" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/swDirectLaunch"
                style="@style/Widget.IOSched.Settings.Switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enable_auto_open_app" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/swAutoPopIme"
                style="@style/Widget.IOSched.Settings.Switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enable_auto_pop_ime" />

            <TextView
                android:id="@+id/btReturnSearch"
                style="@style/Widget.IOSched.Settings.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/return_to_search" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>